# projeto6sitescomdjango

./: .gitignore  README.md  README.pt-br.md  db.sqlite3  planejamento.txt  pyproject.toml  requirements.txt
filme/: admin.py  apps.py  forms.py  models.py  novos_context.py  urls.py  views.py
filme/migrations/: 0001_initial.py  0002_alter_usuario_filmes_vistos.py
filme/templates/: criarconta.html  detalhesfilme.html  editarperfil.html  homefilmes.html  homepage.html  login.html  logout.html  pesquisa.html
hashflix/: settings.py  urls.py
templates/: base.html  navbar.html
